@@ -12,6 +12,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -71,7 +72,7 @@ public class WarehouseService implements WarehouseUseCase {
     public List<WarehouseResult> getAllWarehouses() {
         return warehouseRepository.findAll().stream()
                 .map(WarehouseResult::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private Warehouse findById(Long id) {
